--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -3,3 +3,8 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 1rem;
 }
+
+.pagination{
+    margin: 2rem auto;
+    width: fit-content;
+}
