--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -8,3 +8,9 @@
     margin: 2rem auto;
     width: fit-content;
 }
+
+.search-input-container{
+    margin: 1rem auto;
+    width: 300px;
+    max-width: 100%;
+}
